Now looks okay, alignment is fixed and most of the colors are done. I would like the headlines to pop a little more but it totally fills my needs.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,7 @@ h1 {
   margin: 10% auto;
   font-family: 'Pacifico', cursive;
   font-size: 3.0em;
+  text-align: center;
 }
 
 
@@ -19,20 +20,26 @@ LISTS
   font-family: 'Roboto Mono', monospace;
   font-weight: 500;
   width: 100%;
+  text-align: center;
 }
 
-#main li {
+#main a {
   font-family: 'Roboto Mono', monospace;
   font-weight: 400;
+  text-decoration: none;
 }
 
+
+
 #main ul {
+  padding: 0;
+  text-align: center;
   list-style: none;
 }
 
 #main section {
+  display: inline-block;
   float: left;
-  max-width:
   margin: 0 2.5%;
   width: 20%;
 }
@@ -43,6 +50,10 @@ COLORS
 
 body {
   background-color: #2B303B;
+  color: #EFF1F5;
+}
+
+body a, body a:visited {
   color: #EFF1F5;
 }
 
